tests/parser-test-files/bad-files/parse-while-let.6.error
error: Malformed while-let expression
  --> test:4:28
   |
 4 |  (define f (while-let :label))
   |                             ^ expected pattern
